--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script type="application/javascript" src="jquery/adblockerKiller.js"></script>
+<script src="jquery/adblockerKiller.js"></script>
 
 <body>
 
