--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
+<body>
+    <header>
+        <h1>Demo for ad block killer</h1>
+    </header>
+
+    <article>
+
+        <section>
+        <p>Stop people accessing a website, if they are using ad blocker</p>
+        </section>
+
+    </article>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="jquery/adblockerKiller.js"></script>
-
-<body>
-
-<h1>Demo for ad block killer</h1>
-
-<p>Stop people accessing a website, if they are using ad blocker</p>
-<script>
-    $('body').adBlockKiller();
-</script>
+    <script>
+        $('header').adBlockKiller();
+    </script>
 </body>
+
 </html>
